monitoring-logging/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: grafana.demo.com
    http:
      paths:
      - backend:
          service:
            name: monitoring-demo-grafana
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
