monitoring-logging/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: prometheus.demo.com
    http:
      paths:
      - backend:
          service:
            name: monitoring-demo-kube-prome-prometheus
            port:
              number: 9090
        path: /
        pathType: ImplementationSpecific
